[package]
name = "neural-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.8"
ndarray = {version = "0.15.6", features = ["serde"]}
rand = "0.8.5"
serde = {version = "1.0.188", features = ["derive"]}
